package ticket;

public class Main {
    public static void main(String[] args) {

        SportTicket sport1 = new SportTicket("München",
                "Champions", 50, 8 );
        sport1.printTicketDaten();
        sport1.berechneTicketPreis();
/*
        SportTicket sport2 = new SportTicket("München",
                "Champions", 50, 6 );
        sport2.printTicketDaten();
        sport2.berechneTicketPreis();


        System.out.println();
        KonzertTicket konzert1 = new KonzertTicket("Berlin",
                "AC/DC", 50, 60, 11 );
        konzert1.printTicketDaten();


        System.out.println();
        KinoTicket kino1 = new KinoTicket("München",
                "Nemo", 8, 10, 2 );
        kino1.printTicketDaten();

        System.out.println();
        AutoKinoTicket autiKino1 = new AutoKinoTicket("München",
                "Nemo", 8, 10, 2, 4 );
        autiKino1.printTicketDaten();

*/

    }
}
