@startuml

title __TICKET's Class Diagram__\n

  namespace ticket {
    class ticket.AutoKinoTicket {
        ~ anzahlPersonen : int
        + AutoKinoTicket()
        + printTicketDaten()
    }
  }
  

  namespace ticket {
    interface ticket.Berechnung {
        {abstract} + berechneTicketPreis()
    }
  }
  

  namespace ticket {
    class ticket.KinoTicket {
        ~ filmDauer : int
        + KinoTicket()
        + berechneTicketPreis()
        + printTicketDaten()
    }
  }
  

  namespace ticket {
    class ticket.KonzertTicket {
        ~ sitzReihe : int
        + KonzertTicket()
        + berechneTicketPreis()
        + printTicketDaten()
    }
  }
  

  namespace ticket {
    class ticket.Main {
        {static} + main()
    }
  }
  

  namespace ticket {
    class ticket.SportTicket {
        ~ pokalStufe : int
        + SportTicket()
        + berechneTicketPreis()
        + getPokalStufe()
        + printTicketDaten()
        + setPokalStufe()
    }
  }
  

  namespace ticket {
    abstract class ticket.Ticket {
        ~ basisPreis : int
        ~ eventName : String
        ~ eventOrt : String
        ~ ticketPreis : int
        + Ticket()
        + getBasisPreis()
        + getEventName()
        + getEventOrt()
        + getTicketPreis()
        {abstract} + printTicketDaten()
        + setBasisPreis()
        + setEventName()
        + setEventOrt()
        + setTicketPreis()
    }
  }
  

  ticket.AutoKinoTicket .up.|> ticket.Berechnung
  ticket.AutoKinoTicket -up-|> ticket.KinoTicket
  ticket.KinoTicket .up.|> ticket.Berechnung
  ticket.KinoTicket -up-|> ticket.Ticket
  ticket.KonzertTicket .up.|> ticket.Berechnung
  ticket.KonzertTicket -up-|> ticket.Ticket
  ticket.SportTicket .up.|> ticket.Berechnung
  ticket.SportTicket -up-|> ticket.Ticket


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
